# index-tts

./: .coverage  .gitignore  README.md  README_EN.md  api_example.py  api_example_v2.py  api_server.py  api_server_v2.py  benchmark.py  cli_with_profiling.py  convert.py  convert_hf_format.py  patch_vllm.py  pyproject.toml  requirements.txt  webui.py  webui_v2.py  whitelist.py
.basedpyright/: baseline.json
.githooks/: pre-commit
.github/prompts/: extract.prompt.md
.serena/: project.yml
certs/: key.pem  localhost.pem
checkpoints/: config.yaml
indextts/: audio_utils.py  cli.py  config.py  emotion.py  infer.py  infer_v2.py  infer_vllm.py  infer_vllm_v2.py  load_modules.py  profiler.py  profiling.py  qwen_emotion.py  util.py
indextts/BigVGAN/: ECAPA_TDNN.py  activations.py  bigvgan.py  models.py  utils.py
indextts/accel/: __init__.py  accel_engine.py  attention.py  gpt2_accel.py  kv_manager.py
indextts/gpt/: __init__.py  conformer_encoder.py  factory.py  index_tts_gpt2_vllm_v1.py  inference_model.py  learned_pos_emb.py  model.py  model_v2.py  model_vllm.py  model_vllm_v2.py  perceiver.py  transformers_beam_search.py  transformers_generation_utils.py  transformers_gpt2.py  transformers_modeling_utils.py  utils.py
indextts/s2mel/: hf_utils.py  optimizers.py  wav2vecbert_extract.py
indextts/utils/: arch_util.py  checkpoint.py  common.py  feature_extractors.py  front.py  maskgct_utils.py  profiling.py  text_utils.py  typical_sampling.py  utils.py  webui_utils.py  xtransformers.py
indextts/vqvae/: xtts_dvae.py
ptest/: test_main.py
test/: gpt_vllm.py  simple_test.py
tests/: padding_test.py  regression_test.py  test_benchmark_rtf.py  test_common_utils.py  test_gpt_utils.py  test_inference_benchmark.py  test_mel_spectrogram_device.py  test_rotary_emb.py  test_streaming.py  test_verify_shapes.py
tools/: PROFILING.md  benchmark.py  gpu_check.py  profile_benchmark.py  profile_cli.py  profiling_guide.py
tools/git-hooks/: README.md  install.sh  post-checkout  pre-commit
tools/i18n/: i18n.py  scan_i18n.py
typings/bigvgan/: __init__.pyi  activations.pyi  bigvgan.pyi  discriminators.pyi  env.pyi  inference.pyi  inference_e2e.pyi  loss.pyi  meldataset.pyi  train.pyi  utils.pyi
typings/dac/: __init__.pyi  __main__.pyi
typings/flash_attn/: __init__.pyi
typings/gradio/: __init__.pyi  __main__.pyi  analytics.pyi  block_function.pyi  blocks.pyi  blocks_events.pyi  brotli_middleware.pyi  chat_interface.pyi  component_meta.pyi  context.pyi  data_classes.pyi  events.pyi  exceptions.pyi  external.pyi  external_utils.pyi  flagging.pyi  helpers.pyi  http_server.pyi  i18n.pyi  image_utils.pyi  interface.pyi  ipython_ext.pyi  mcp.pyi  media.pyi  monitoring_dashboard.pyi  networking.pyi  node_server.pyi  oauth.pyi  pipelines.pyi  pipelines_utils.pyi  processing_utils.pyi  queueing.pyi  ranged_response.pyi  renderable.pyi  route_utils.pyi  routes.pyi  screen_recording_utils.pyi  server_messages.pyi  state_holder.pyi  templates.pyi  (+3 more)
typings/huggingface_hub/: __init__.pyi  _commit_api.pyi  _commit_scheduler.pyi  _inference_endpoints.pyi  _jobs_api.pyi  _local_folder.pyi  _login.pyi  _oauth.pyi  _snapshot_download.pyi  _space_api.pyi  _tensorboard_logger.pyi  _upload_large_folder.pyi  _webhooks_payload.pyi  _webhooks_server.pyi  community.pyi  constants.pyi  dataclasses.pyi  errors.pyi  fastai_utils.pyi  file_download.pyi  hf_api.pyi  hf_file_system.pyi  hub_mixin.pyi  inference_api.pyi  keras_mixin.pyi  lfs.pyi  repocard.pyi  repocard_data.pyi  repository.pyi
typings/safetensors/: __init__.pyi  flax.pyi  mlx.pyi  numpy.pyi  paddle.pyi  tensorflow.pyi  torch.pyi
typings/sentencepiece/: __init__.pyi  sentencepiece_model_pb2.pyi
typings/torch/: __config__.pyi  __future__.pyi  __init__.pyi  _classes.pyi  _custom_ops.pyi  _guards.pyi  _jit_internal.pyi  _linalg_utils.pyi  _lobpcg.pyi  _meta_registrations.pyi  _namedtensor_internals.pyi  _ops.pyi  _sources.pyi  _tensor.pyi  _tensor_str.pyi  _utils.pyi  _utils_internal.pyi  functional.pyi  hub.pyi  library.pyi  overrides.pyi  quasirandom.pyi  random.pyi  return_types.pyi  serialization.pyi  storage.pyi  torch_version.pyi  types.pyi  version.pyi
typings/torchaudio/: __init__.pyi  _torchcodec.pyi  kaldi_io.pyi  version.pyi
typings/torchcodec/: __init__.pyi  _frame.pyi
typings/transformers/: __init__.pyi  activations.pyi  activations_tf.pyi  audio_utils.pyi  cache_utils.pyi  configuration_utils.pyi  convert_graph_to_onnx.pyi  convert_pytorch_checkpoint_to_tf2.pyi  convert_slow_tokenizer.pyi  convert_slow_tokenizers_checkpoints_to_fast.pyi  convert_tf_hub_seq_to_seq_bert_to_pytorch.pyi  debug_utils.pyi  dependency_versions_check.pyi  dependency_versions_table.pyi  dynamic_module_utils.pyi  feature_extraction_sequence_utils.pyi  feature_extraction_utils.pyi  hf_argparser.pyi  hyperparameter_search.pyi  image_processing_base.pyi  image_processing_utils.pyi  image_processing_utils_fast.pyi  image_transforms.pyi  image_utils.pyi  keras_callbacks.pyi  masking_utils.pyi  model_debugging_utils.pyi  modelcard.pyi  modeling_attn_mask_utils.pyi  modeling_flash_attention_utils.pyi  modeling_flax_outputs.pyi  modeling_flax_pytorch_utils.pyi  modeling_flax_utils.pyi  modeling_gguf_pytorch_utils.pyi  modeling_layers.pyi  modeling_outputs.pyi  modeling_rope_utils.pyi  modeling_tf_outputs.pyi  modeling_tf_pytorch_utils.pyi  modeling_tf_utils.pyi  (+23 more)
typings/wetext/: __init__.pyi  cli.pyi  config.pyi  constants.pyi  token_parser.pyi  utils.pyi  wetext.pyi
typings/x_transformers/: __init__.pyi  attend.pyi  autoregressive_wrapper.pyi  belief_state_wrapper.pyi  continuous.pyi  dpo.pyi  entropy_based_tokenizer.pyi  free_transformer.pyi  gpt_vae.pyi  multi_input.pyi  neo_mlp.pyi  nonautoregressive_wrapper.pyi  up_wrapper.pyi  x_transformers.pyi  xl_autoregressive_wrapper.pyi  xval.pyi
typings/yaml/: __init__.pyi  _yaml.pyi  composer.pyi  constructor.pyi  cyaml.pyi  dumper.pyi  emitter.pyi  error.pyi  events.pyi  loader.pyi  nodes.pyi  parser.pyi  reader.pyi  representer.pyi  resolver.pyi  scanner.pyi  serializer.pyi  tokens.pyi
(+3487 files in other folders)
