[project]
name = "indextts"
version = "2.0.0"
description = "IndexTTS2: A Breakthrough in Emotionally Expressive and Duration-Controlled Auto-Regressive Zero-Shot Text-to-Speech"
authors = [{ name = "Bilibili IndexTTS Team" }]
license = "LicenseRef-Bilibili-IndexTTS"
license-files = ["LICEN[CS]E*", "INDEX_MODEL_LICENSE*"]
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",

  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",

  "Natural Language :: English",
  "Natural Language :: Chinese (Simplified)",

  "Programming Language :: Python :: 3",

  "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
  # IMPORTANT: Always run `uv lock` or `uv lock --upgrade` to resolve dependencies
  # and update the lockfile after editing anything below.
  # WARNING: Ensure that you don't have a local `uv.toml` which overrides PyPI
  # while generating the lockfile: https://github.com/astral-sh/uv/issues/15741
  "accelerate>=1.8.1",
  "numpy>=1.26.2",
  "omegaconf>=2.3.0",
  "safetensors>=0.5.2",
  "sentencepiece>=0.2.1",
  "torch>=2.8",
  "torchaudio>=2.8",
  "torchcodec>=0.7",
  "tqdm>=4.67.1",
  "transformers>=4.52.1,<4.56",
  "wetext>=0.0.9",
  "einops>=0.8.1",
]

[dependency-groups]
dev = [
  "basedpyright>=1.34.0",
  "pyinstrument>=5.1.1",
  "pytest>=8.0.0",
  "pytest-benchmark>=4.0.0",
  "rich>=14.2.0",
]

[project.optional-dependencies]
# To install the WebUI support, use `uv sync --extra webui` (or `--all-extras`).
webui = ["gradio>=5.45.0"]
# To install the DeepSpeed support, use `uv sync --extra deepspeed` (or `--all-extras`).
deepspeed = ["deepspeed>=0.17.1"]
accelerate = ["flash-attn; sys_platform != 'darwin'"]

[project.urls]
Homepage = "https://github.com/index-tts/index-tts"
Repository = "https://github.com/index-tts/index-tts.git"

[project.scripts]
# Set the installed binary names and entry points.
indextts = "indextts.cli:main"

[build-system]
# How to build the project as a CLI tool or PyPI package.
# NOTE: Use `uv tool install -e .` to install the package as a CLI tool.
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
# Disable build isolation when building DeepSpeed from source.
# NOTE: This is *necessary* so that DeepSpeed builds directly within our `.venv`,
# and finds our CUDA-enabled version of PyTorch, which DeepSpeed *needs* during
# its compilation to determine what GPU support to compile for itself. It also
# saves time, since it won't waste time downloading a generic PyTorch version.
no-build-isolation-package = ["deepspeed"]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.4.17/flash_attn-2.8.3%2Bcu128torch2.9-cp313-cp313-linux_x86_64.whl" }

[tool.ruff]
line-length = 120
output-format = "concise"
preview = true
show-fixes = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint]
extend-select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "E",
  "EM",
  "EXE",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  "N",
  "NPY",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLW",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "A001",
  "ANN401",
  "ARG002",
  "B008",
  "B019",
  "B905",
  "C901",
  "COM812",
  "E501",
  "E741",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX002",
  "G004",
  "N806",    # non-lowercase-variable-in-function
  "N812",    # lowercase-imported-as-non-lowercase
  "N999",    # invalid-module-name
  "PLW1514", # unspecified-encoding
  "RET507",  # superfluous-else-continue
  "RUF001",  # ambiguous-unicode-character-string
  "RUF002",  # ambiguous-unicode-character-docstring
  "RUF003",  # ambiguous-unicode-character-comment
  "S101",    # assert
  "S404",    # suspicious-subprocess-import
  "SIM108",  # if-else-block-instead-of-if-exp
  "T201",    # print
  "TC001",
  "TC003",
  "TC006",   # runtime-cast-value
  "TID252",  # relative-imports
  "TRY003",  # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"typings/**" = [
  "A002",
  "A004",
  "ANN",
  "ARG001",
  "ASYNC109",
  "BLE001",
  "F403",
  "F405",
  "F722",
  "F811",
  "F821",
  "F822",
  "INP001",
  "N",
  "PLC0105",
  "PLC0415",
  "PLC2701",
  "PLE0604",
  "PLE0605",
  "PLW0211",
  "PLW1508",
  "PYI001",
  "PYI002",
  "PYI004",
  "PYI024",
  "PYI034",
  "PYI036",
  "PYI042",
  "PYI046",
  "PYI047",
  "PYI048",
  "PYI049",
  "PYI051",
  "PYI063",
  "RUF036",
  "RUF045",
  "S110",
  "S112",
  "S301",
  "SLF001",
  "T100",
  "TRY300",
  "UP007",
  "UP035",
  "UP046",
  "UP049",
]

[tool.pyright]
exclude = [".venv", "**/__pycache__/**"]
ignore = ["./tools", "./tests"]
reportCallInDefaultInitializer = false
reportExplicitAny = false
reportIgnoreCommentWithoutRule = false
reportImplicitStringConcatenation = false
reportUnannotatedClassAttribute = false
reportUnusedCallResult = false
stubPath = "./typings"
useLibraryCodeForTypes = false

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-unresolved-reference = "warn"

[tool.ty.src]
exclude = ["./typings", "./tools", "./override", "./tests"]

[tool.ty.environment]
extra-paths = ["./typings"]
